HEAD
	+ Fix widget placeholder to avoid 0px when any widget 
	  has not been placed in the dashboard. Fix #1998
7.0.3
	+ Improve server_uuid generation
7.0.2
	+ Fix security issue on apt
7.0.1
	+ Update release-upgrade script
	+ Fix permissions for pre-save and post-save
7.0.0
	+ Fix issue related with tar option and config backup
	+ Fix Smart Admin report minor error
	+ Fix regression on certificate key path (avoiding CA generation 
	  issue and vnc issues)
	+ Remove deprecated ssl on in favor of listen ssl
	+ Increase default rsa key length to 4096
	+ Set version number to 7.0.0
6.2.5
	+ Fix configuration report date
6.2.4
	+ Prevent to use more than one trial license at the same machine
	+ Fix UCP API response handler
	+ Redirect http to https on webadmin
	+ Add AuthRemote middleware
	+ Added UCP icon
6.2.3
	+ Fix the import apt key process
	+ Remove old activate-license
	+ Improve the way in the license key code status is verified
6.2.2
	+ Add public key for .com repository
	+ Add new license key types
6.2.1
	+ Add extra component to sources.list
	+ License management improved
	+ License activation improved
6.2.0
	+ Set version number to 6.2.0
6.1.3
	+ Fix root's emails counter in the smart admin report
	+ Improve Smart Admin report
	+ Fix wrong exit code from zentyal cron job
	+ Fix wrong redirection in smart admin report generation
	+ Add AppArmor as disabled service (waiting for new profiles)
	+ Add AppArmor as dependency
6.1.2
	+ Improve upgrade process
	+ Set to 85% the min value for ram usage before the notification has been triggered
	+ Remove -x from ram checker script
	+ Fix several typos
6.1.1
	+ Fix repo name
	+ Add curl as core dependency
	+ Fixed wrong image name
	+ Add smart alerts to Smart Admin feature
	+ Add kernel management to Smart Admin feature
	+ Add mail recipient for smart admin report
6.1
	+ Fix broken link to zentyal store and tracker in dashboard widget
	+ Add log rotation for uwsgi.log